--- a/test/canary/Dockerfile.canary
+++ b/test/canary/Dockerfile.canary
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y curl \
     unzip
 
 # Install awscli
-RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.5.3.zip" -o "awscliv2.zip" \
  && unzip -qq awscliv2.zip \
  && ./aws/install
 
